# research-coupled-oscilator-network

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.sh
include/: mine.hpp
include/mine/: const.hpp  io_observer.hpp  macro_observer.hpp  mcmc.hpp  observers.hpp  system.hpp  utils.hpp
network-exploration/: CMakeLists.txt  main.cpp  mean_field.cpp  order.hpp  order_checker.cpp  test_order_evaluator.cpp
